[gd_scene load_steps=5 format=3 uid="uid://bxh3ij427qs0k"]

[ext_resource type="Script" path="res://Live/Speedrun/LiveSplit/Split.gd" id="1_fmy8t"]
[ext_resource type="Shader" path="res://Live/Speedrun/ActiveSplitBackground.gdshader" id="2_gr6cv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w4a05"]
shader = ExtResource("2_gr6cv")

[sub_resource type="LabelSettings" id="LabelSettings_t4y85"]
resource_local_to_scene = true
font_color = Color(0, 1, 0, 1)

[node name="Split" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
script = ExtResource("1_fmy8t")
ahead_gaining_color = Color(0, 0.8, 0.211765, 1)
ahead_losing_color = Color(0.321569, 0.8, 0.45098, 1)
behind_gaining_color = Color(0.8, 0.360784, 0.321569, 1)
behind_losing_color = Color(0.8, 0.0705882, 0, 1)
gold_color = Color(0.847059, 0.686275, 0.121569, 1)

[node name="ActiveColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_w4a05")
layout_mode = 2
color = Color(0.631373, 0.631373, 0.631373, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SplitNameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "<split-name>"

[node name="ComparisonLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_t4y85")
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "-"
horizontal_alignment = 2
